--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
+    "ng-starrating": "^1.0.20",
     "rxjs": "~6.5.4",
     "swiper": "^6.6.1",
     "tslib": "^1.10.0",
