--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.1.13",
     "ng-starrating": "^1.0.20",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^11.0.0",
     "swiper": "^6.6.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
